# libbar

./: .gitignore  CMakeLists.txt  README  bar-config.cmake.in  find_req_pkgs.cmake.in
inc/: CMakeLists.txt  bar.h
src/: CMakeLists.txt  bar.c
